--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.0",
+    "@chakra-ui/react": "^1.7.2",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "framer-motion": "^4.1.17",
     "next": "12.0.3",
-    "postcss": "^8.3.11",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "tailwindcss": "^2.2.19"
+    "sass": "^1.43.4",
+    "three": "^0.134.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
